# dwdown

./: .gitignore  .gitlab-ci.yml  README.md  ReadMe.md  documentation.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflow/: deploy.yml
docs/: documentation.md
docs/data/: MappingStore.md
docs/download/: DWDDownloader.md  ForecastDownloader.md  HistoricalDownloader.md  MosmixDownloader.md  OSDownloader.md
docs/notify/: Notifier.md
docs/processing/: DataMerger.md  DataProcessor.md  GribFileManager.md
docs/tools/: functions.md
docs/upload/: OSUploader.md
docs/utils/: DataFrameOperator.md  DateTimeUtils.md  FileHandler.md  LogHandler.md  NetworkHandlers.md  OSHandler.md  Utilities.md
documentation/download/: DWDDownloader.md  MinioDownloader.md
documentation/notify/: Notifier.md
documentation/processing/: DataEditor.md
documentation/upload/: MinioUploader.md
example_usage/: 00_dwd_forecast_scraper.py  00b_dwd_hist-station-data_scraper.py  00c_dwd_mosmix_scraper.py  02_os_downloader.py  03_data_processing.py  dwd_hist_scraper.py  dwd_processing.py  dwd_scraper.py  minio_downloader.py  minio_uploader.py
src/dwdown/: __init__.py
src/dwdown/data/: __init__.py  mapping.py
src/dwdown/download/: __init__.py  downloader.py  forecast_download.py  historical_download.py  mosmix_download.py  mosmix_downloader.py  os_download.py
src/dwdown/notify/: __init__.py  notifier.py
src/dwdown/processing/: __init__.py  data_merging.py  grib_data_handling.py  processor.py
src/dwdown/tools/: __init__.py  functions.py
src/dwdown/upload/: __init__.py  os_upload.py  uploader.py
src/dwdown/utils/: __init__.py  date_time_utilis.py  df_utilis.py  file_handling.py  general_utilis.py  log_handling.py  network_handling.py  os_handling.py
tests/: dwd_processing_test.py  minio_downloader_test.py  minio_uploader_test.py  notifier_test.py  test_ForecastDownloader.py  test_HistoricalDownloader.py  test_MOSMIXDownloader.py  test_MOSMIX_Downloader.py  test_OSDownloader.py  test_OSUploader.py  test_date_time_utilis.py  test_file_handling.py  test_log_handling.py  test_mapping.py  test_network_handling.py  test_notifier.py  test_processing.py  test_utils.py
